@@ -813,74 +813,26 @@ resume_process(PyObject* self, PyObject* args)
 static PyObject*
 get_process_num_threads(PyObject* self, PyObject* args)
 {
-    long pid;
-    int pid_return;
-    long nthreads = 0;
-    HANDLE hThreadSnap = NULL;
-    THREADENTRY32 te32 = {0};
+    DWORD pid;
+    PSYSTEM_PROCESS_INFORMATION process;
+    PVOID buffer;
+    int num;
 
     if (! PyArg_ParseTuple(args, "l", &pid)) {
         return NULL;
     }
-    if (pid == 0) {
-        // raise AD instead of returning 0 as procexp is able to
-        // retrieve useful information somehow
-        return AccessDenied();
-    }
-
-    pid_return = pid_is_running(pid);
-    if (pid_return == 0) {
-        return NoSuchProcess();
-    }
-    if (pid_return == -1) {
+    if (get_process_info(pid, &process, &buffer) != 1) {
+        free(buffer);
         return NULL;
     }
-
-    hThreadSnap = CreateToolhelp32Snapshot(TH32CS_SNAPTHREAD, 0);
-    if (hThreadSnap == INVALID_HANDLE_VALUE) {
-        PyErr_SetFromWindowsErr(0);
-        return NULL;
-    }
-
-    // Fill in the size of the structure before using it
-    te32.dwSize = sizeof(THREADENTRY32);
-
-    if (! Thread32First(hThreadSnap, &te32)) {
-        PyErr_SetFromWindowsErr(0);
-        CloseHandle(hThreadSnap);
-        return NULL;
-    }
-
-    // Walk the thread snapshot to find all threads of the process.
-    // If the thread belongs to the process, increase the counter.
-    do
-    {
-        if (te32.th32OwnerProcessID == pid)
-        {
-            HANDLE hThread = OpenThread(THREAD_QUERY_INFORMATION,
-                                        FALSE, te32.th32ThreadID);
-            if (hThread == NULL) {
-                if (GetLastError() == ERROR_INVALID_PARAMETER) {
-                    NoSuchProcess();
-                }
-                else {
-                    PyErr_SetFromWindowsErr(0);
-                }
-                CloseHandle(hThread);
-                CloseHandle(hThreadSnap);
-                return NULL;
-            }
-            nthreads += 1;
-            CloseHandle(hThread);
-        }
-    } while (Thread32Next(hThreadSnap, &te32));
-
-    // every process should be supposed to have at least one thread
-    if (nthreads == 0) {
+    if (pid_is_running(pid) == 0) {
+        free(buffer);
         return NoSuchProcess();
     }
 
-    return Py_BuildValue("l", nthreads);
+    num = (int)process->NumberOfThreads;
+    free(buffer);
+    return Py_BuildValue("i", num);
 }
 
 
